apps/authentik/base/middleware-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-middleware-headers
spec:
  headers:
    customRequestHeaders:
      X-XSS-Protection: "1; mode=block"
      X-Content-Type-Options: "nosniff"
      X-Robots-Tag: "noindex, nofollow"
      X-Forwarded-Proto: "https"
      Referrer-Policy: "no-referrer-when-downgrade"
      Permissions-Policy: "interest-cohort=()"
      X-Permitted-Cross-Domain-Policies: "none"
    customResponseHeaders:
      X-XSS-Protection: "1; mode=block"
      X-Content-Type-Options: "nosniff"
      X-Robots-Tag: "noindex, nofollow"
      X-Forwarded-Proto: "https"
      Referrer-Policy: "no-referrer-when-downgrade"
      Content-Security-Policy: "default-src 'self' *.mimotej.stream https: blob:; style-src 'self' *.mimotej.stream 'unsafe-inline' https:; script-src 'self' *.mimotej.stream 'unsafe-eval' 'unsafe-inline' https: blob: ; font-src 'self' *.mimotej.stream fonts.gstatic.com data:; img-src 'self' *.mimotej.stream raw.githubusercontent.com avatars.githubusercontent.com data: blob:; connect-src 'self' *.mimotej.stream https: data:; frame-src 'self' *.mimotej.stream blob:; worker-src 'self' *.mimotej.st [...]
      Permissions-Policy: "interest-cohort=()"
      X-Permitted-Cross-Domain-Policies: "none"
