apps/authentik/base/ingress-external.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-secure
spec:
  entryPoints:
    - websecure-external
  routes:
    - match: Host(`auth.mimotej.stream`)
      kind: Rule
      middlewares:
        - name: middleware-crowdsec
          namespace: traefik
        - name: middleware-geoblock
          namespace: traefik
        - name: authentik-middleware-headers
      services:
        - name: authentik-server
          port: 9001
  tls:
    secretName: authentik-tls
