apps/authentik/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-ui

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`authentik.internal`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
